--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+<title>Michael Le - UX/UI Designer</title>
 <body>
 <h1>Michael Le</h1>
 <p>This is my online portfolio. I'm hosted with GitHub Pages.</p>
