Change title from Designer to Developer
I am a coder first, designer second

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>Michael Le - UX/UI Designer</title>
+<title>Michael Le - UX/UI Developer</title>
 <body>
 <h1>Michael Le</h1>
 <p>This is my online portfolio. I'm hosted with GitHub Pages.</p>
