Add placeholder pages for the different sections

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <body>
 <h1>Michael Le</h1>
 <p>This is my online portfolio. I'm hosted with GitHub Pages.</p>
+
 <p>Coming soon</p>
+
+<a href="web.html">Web</a>
+<a href="desktop.html">Desktop</a>
+<a href="branding.html">Branding</a>
+<a href="presentation.html">Presentation</a>
 </body>
 </html>
