--- a/presentation.html
+++ b/presentation.html
@@ -1,9 +1,103 @@
 <!DOCTYPE html>
 <html>
-<title>Michael Le - UX/UI Developer</title>
-<body>
-<h1>Personal Works</h1>
-<p>This page relates to my personal work like video and presentations</p>
-<p>Coming soon</p>
-</body>
+  <head>
+    <!-- Basic Page Needs
+  ================================================== -->
+	<meta charset="utf-8">	
+	<title>Michael Le - UX/UI Developer</title>
+	<meta name="description" content="">
+	<meta name="author" content="Michael Le">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Bootstrap -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/footer.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+    <![endif]-->
+
+    <!--[if IE 7]>
+      <link href="assets/font-awesome/css/font-awesome-ie7.min.css" rel="stylesheet">
+    <![endif]-->
+
+    <!-- Favicons
+	================================================== -->
+	<link rel="shortcut icon" href="images/favicon.ico?hi=lo">
+	<link rel="apple-touch-icon" href="images/apple-touch-icon.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
+  </head>
+  <body>
+  	<div id="wrap">
+	    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="index.html"> <img width="20" height="20" src="images/logo/Icon-20x20@2x.png"></a>
+	          <a class="navbar-brand" href="index.html">Michael Le</a>
+	        </div>
+	        <div class="navbar-collapse collapse">
+	          <ul class="nav navbar-nav navbar-right">
+	            <li><a href="desktop.html">Desktop (WPF)</a></li>
+	            <li><a href="web.html">Web</a></li>
+	            <li><a href="branding.html">Branding</a></li>
+	            <li class="active"><a href="presentation.html">Presentation</a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </div>
+
+	    <!-- Begin page content -->
+		<div class="container">
+            Presentation info
+        </div>
+    </div> <!--/ wrap -->
+
+    <div id="footer">
+      <div class="container">
+        <span class="pull-right">
+            Feel free to 
+            <a href=“mailto:le.michael@gmail.com”>email</a> 
+            me or follow me 
+            @lifeofmle
+            <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
+                <span class="icon-stack">
+                  <i class="icon-circle icon-stack-base"></i>
+                  <i class="icon-linkedin icon-light"></i>
+                </span> 
+            </a>
+            <a href="https://twitter.com/lifeofmle" target="_blank">
+                <span class="icon-stack">
+                  <i class="icon-circle icon-stack-base"></i>
+                  <i class="icon-twitter icon-light"></i>
+                </span> 
+            </a>
+            <a href="http://instagram.com/lifeofmle" target="_blank">
+                <span class="icon-stack">
+                  <i class="icon-circle icon-stack-base"></i>
+                  <i class="icon-instagram icon-light"></i>
+                </span> 
+            </a>
+        </span>
+      </div>
+    </div>
+
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="js/jquery-1.11.0.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
+  </body>
 </html>
