--- a/desktop.html
+++ b/desktop.html
@@ -70,26 +70,27 @@
         <span class="pull-right">
             Feel free to 
             <a href=“mailto:le.michael@gmail.com”>email</a> 
-            me or follow me 
-            @lifeofmle
-            <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-linkedin icon-light"></i>
-                </span> 
-            </a>
-            <a href="https://twitter.com/lifeofmle" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-twitter icon-light"></i>
-                </span> 
-            </a>
-            <a href="http://instagram.com/lifeofmle" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-instagram icon-light"></i>
-                </span> 
-            </a>
+            me or follow me <br />
+            <span class="pull-right">
+	            <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
+	                <span class="icon-stack">
+	                  <i class="icon-circle icon-stack-base"></i>
+	                  <i class="icon-linkedin icon-light"></i>
+	                </span> 
+	            </a>
+	            <a href="https://twitter.com/lifeofmle" target="_blank">
+	                <span class="icon-stack">
+	                  <i class="icon-circle icon-stack-base"></i>
+	                  <i class="icon-twitter icon-light"></i>
+	                </span> 
+	            </a>
+	            <a href="http://instagram.com/lifeofmle" target="_blank">
+	                <span class="icon-stack">
+	                  <i class="icon-circle icon-stack-base"></i>
+	                  <i class="icon-instagram icon-light"></i>
+	                </span> 
+	            </a>
+        	</span>
         </span>
       </div>
     </div>
