--- a/index.html
+++ b/index.html
@@ -61,38 +61,45 @@
 	      </div>
 	    </div>
 
+        <div class="jumbotron">
+          <div class="container">
+            <h1>Hello, world!</h1>
+            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+          </div>
+        </div>
+
 	    <!-- Begin page content -->
 		<div class="container">
             This is a showcase of my work
         </div>
     </div> <!--/ wrap -->
 
-
     <div id="footer">
       <div class="container">
         <span class="pull-right">
             Feel free to 
             <a href=“mailto:le.michael@gmail.com”>email</a> 
-            me or follow me 
-            @lifeofmle
-            <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-linkedin icon-light"></i>
-                </span> 
-            </a>
-            <a href="https://twitter.com/lifeofmle" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-twitter icon-light"></i>
-                </span> 
-            </a>
-            <a href="http://instagram.com/lifeofmle" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-instagram icon-light"></i>
-                </span> 
-            </a>
+            me or follow me <br />
+            <span class="pull-right">
+                <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
+                    <span class="icon-stack">
+                      <i class="icon-circle icon-stack-base"></i>
+                      <i class="icon-linkedin icon-light"></i>
+                    </span> 
+                </a>
+                <a href="https://twitter.com/lifeofmle" target="_blank">
+                    <span class="icon-stack">
+                      <i class="icon-circle icon-stack-base"></i>
+                      <i class="icon-twitter icon-light"></i>
+                    </span> 
+                </a>
+                <a href="http://instagram.com/lifeofmle" target="_blank">
+                    <span class="icon-stack">
+                      <i class="icon-circle icon-stack-base"></i>
+                      <i class="icon-instagram icon-light"></i>
+                    </span> 
+                </a>
+            </span>
         </span>
       </div>
     </div>
