--- a/presentation.html
+++ b/presentation.html
@@ -61,9 +61,48 @@
 	    </div>
 
 	    <!-- Begin page content -->
-		<div class="container">
-            Presentation info
-        </div>
+	    <div class="container">
+	    	<div class="row">
+	        <div class="page-header">
+	          <h1>Blog</h1>
+	        </div>
+	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
+	    	</div>	
+        	<div class="row">
+	        <div class="page-header">
+	          <h1>Slides</h1>
+	        </div>
+	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
+
+	        <!-- Three columns of text below the carousel -->
+		      <div class="row">
+		        <div class="col-lg-4">
+		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+		          <h3>Heading</h3>
+		          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		        <div class="col-lg-4">
+		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+		          <h3>Heading</h3>
+		          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		        <div class="col-lg-4">
+		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+		          <h3>Heading</h3>
+		          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		      </div><!-- /.row -->
+	    	</div>
+	    	<div class="row">
+	        <div class="page-header">
+	          <h1>Video</h1>
+	        </div>
+	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
+	    	</div>
+		</div>
     </div> <!--/ wrap -->
 
     <div id="footer">
@@ -71,26 +110,27 @@
         <span class="pull-right">
             Feel free to 
             <a href=“mailto:le.michael@gmail.com”>email</a> 
-            me or follow me 
-            @lifeofmle
-            <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-linkedin icon-light"></i>
-                </span> 
-            </a>
-            <a href="https://twitter.com/lifeofmle" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-twitter icon-light"></i>
-                </span> 
-            </a>
-            <a href="http://instagram.com/lifeofmle" target="_blank">
-                <span class="icon-stack">
-                  <i class="icon-circle icon-stack-base"></i>
-                  <i class="icon-instagram icon-light"></i>
-                </span> 
-            </a>
+            me or follow me <br />
+            <span class="pull-right">
+	            <a href="http://uk.linkedin.com/in/lifeofmle/" target="_blank">
+	                <span class="icon-stack">
+	                  <i class="icon-circle icon-stack-base"></i>
+	                  <i class="icon-linkedin icon-light"></i>
+	                </span> 
+	            </a>
+	            <a href="https://twitter.com/lifeofmle" target="_blank">
+	                <span class="icon-stack">
+	                  <i class="icon-circle icon-stack-base"></i>
+	                  <i class="icon-twitter icon-light"></i>
+	                </span> 
+	            </a>
+	            <a href="http://instagram.com/lifeofmle" target="_blank">
+	                <span class="icon-stack">
+	                  <i class="icon-circle icon-stack-base"></i>
+	                  <i class="icon-instagram icon-light"></i>
+	                </span> 
+	            </a>
+        	</span>
         </span>
       </div>
     </div>
