Add theming and more style to the portfolio

--- a/branding.html
+++ b/branding.html
@@ -15,6 +15,7 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -51,18 +52,50 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
-	            <li><a href="desktop.html">Desktop (WPF)</a></li>
+	            <li><a href="desktop.html">Desktop</a></li>
 	            <li><a href="web.html">Web</a></li>
 	            <li class="active"><a href="branding.html">Branding</a></li>
-	            <li><a href="presentation.html">Presentation</a></li>
+	            <li><a href="presentation.html">Presentations</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
 
+	    <div class="jumbotron jumbotronPageHeader">
+          <div class="container">
+          	<div class="row">
+	            <blockquote class="pull-right">
+	              <br />
+				  <p>Good design is good business</p>
+				  <small class="quoteAuthor">Thomas Watson</small>
+				</blockquote>
+				<h1>Branding</h1>
+	        </div>
+          </div>
+        </div>
+
 	    <!-- Begin page content -->
-		<div class="container">
-            "ICE" Rebranding, MyCauli, Personal Logo
+	    <div class="row">
+			<div class="container">
+	            <div class="row">
+			        <div class="page-header">
+			          <h1>"ICE" Rebranding</h1>
+			        </div>
+			        <p>todo</p>
+		    	</div>
+		    	<div class="row">
+			        <div class="page-header">
+			          <h1>MyCauli</h1>
+			        </div>
+			        <p>todo</p>
+		    	</div>
+		    	<div class="row">
+			        <div class="page-header">
+			          <h1>My Own Logo</h1>
+			        </div>
+			        <p>todo</p>
+		    	</div>
+	        </div>
         </div>
     </div> <!--/ wrap -->
 
