--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -52,25 +53,29 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
-	            <li><a href="desktop.html">Desktop (WPF)</a></li>
+	            <li><a href="desktop.html">Desktop</a></li>
 	            <li><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
-	            <li><a href="presentation.html">Presentation</a></li>
+	            <li><a href="presentation.html">Presentations</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
 
-        <div class="jumbotron">
+        <div class="jumbotron jumbotronMain">
           <div class="container">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+            <div class="row pull-right">
+                <div class="col-md-10 col-md-offset-2">
+                    <h1 class="mainH1">Taking ideas into <b>Reality</b></h1>
+                    <h2 class="mainH2">Code meets design</h2>
+                </div>
+            </div>
           </div>
         </div>
 
 	    <!-- Begin page content -->
 		<div class="container">
-            This is a showcase of my work
+            <p class="lead">This is a showcase of my work</p>
         </div>
     </div> <!--/ wrap -->
 
