--- a/presentation.html
+++ b/presentation.html
@@ -15,6 +15,7 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -51,57 +52,72 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
-	            <li><a href="desktop.html">Desktop (WPF)</a></li>
+	            <li><a href="desktop.html">Desktop</a></li>
 	            <li><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
-	            <li class="active"><a href="presentation.html">Presentation</a></li>
+	            <li class="active"><a href="presentation.html">Presentations</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
 
-	    <!-- Begin page content -->
-	    <div class="container">
-	    	<div class="row">
-	        <div class="page-header">
-	          <h1>Blog</h1>
+	    <div class="jumbotron jumbotronPageHeader">
+          <div class="container">
+          	<div class="row">
+	            <blockquote class="pull-right">
+	              <br />
+				  <p>If you don’t know what you want to achieve in your presentation your audience never will.</p>
+				  <small class="quoteAuthor">Harvey Diamond</small>
+				</blockquote>
+				<h1>Presentations</h1>
 	        </div>
-	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
-	    	</div>	
-        	<div class="row">
-	        <div class="page-header">
-	          <h1>Slides</h1>
-	        </div>
-	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
+          </div>
+        </div>
 
-	        <!-- Three columns of text below the carousel -->
-		      <div class="row">
-		        <div class="col-lg-4">
-		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-		          <h3>Heading</h3>
-		          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-		        </div><!-- /.col-lg-4 -->
-		        <div class="col-lg-4">
-		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-		          <h3>Heading</h3>
-		          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-		        </div><!-- /.col-lg-4 -->
-		        <div class="col-lg-4">
-		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-		          <h3>Heading</h3>
-		          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-		        </div><!-- /.col-lg-4 -->
-		      </div><!-- /.row -->
-	    	</div>
-	    	<div class="row">
-	        <div class="page-header">
-	          <h1>Video</h1>
-	        </div>
-	        <p class="lead">Pin a fixed-height footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A fixed navbar has been added within <code>#wrap</code> with <code>padding-top: 60px;</code> on the <code>.container</code>.</p>
-	    	</div>
+	    <!-- Begin page content -->
+	    <div class="row">
+		    <div class="container">
+		    	<div class="row">
+		        <div class="page-header">
+		          <h1>Blog</h1>
+		        </div>
+		        <p>TODO</p>
+		    	</div>	
+	        	<div class="row">
+		        <div class="page-header">
+		          <h1>Slides</h1>
+		        </div>
+		        <p>Todo</p>
+
+		        <!-- Three columns of text below the carousel -->
+			      <div class="row">
+			        <div class="col-lg-4">
+			          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+			          <h3>Heading</h3>
+			          <p>Todo</p>
+			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+			        </div><!-- /.col-lg-4 -->
+			        <div class="col-lg-4">
+			          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+			          <h3>Heading</h3>
+			          <p>Todo</p>
+			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+			        </div><!-- /.col-lg-4 -->
+			        <div class="col-lg-4">
+			          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+			          <h3>Heading</h3>
+			          <p>Todo</p>
+			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+			        </div><!-- /.col-lg-4 -->
+			      </div><!-- /.row -->
+		    	</div>
+		    	<div class="row">
+		        <div class="page-header">
+		          <h1>Video</h1>
+		        </div>
+		        	<p>Todo</p>
+		    	</div>
+			</div>
 		</div>
     </div> <!--/ wrap -->
 
