--- a/web.html
+++ b/web.html
@@ -15,6 +15,7 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -51,19 +52,51 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
-	            <li><a href="desktop.html">Desktop (WPF)</a></li>
+	            <li><a href="desktop.html">Desktop</a></li>
 	            <li class="active"><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
-	            <li><a href="presentation.html">Presentation</a></li>
+	            <li><a href="presentation.html">Presentations</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
 	    </div>
 
-	    <!-- Begin page content -->
-		<div class="container">
-            AngularJS, KnockoutJS, Sencha Touch
+	    <div class="jumbotron jumbotronPageHeader">
+          <div class="container">
+          	<div class="row">
+	            <blockquote class="pull-right">
+	              <br />
+				  <p>The value of a prototype is in the education it gives you, not in the code itself.</p>
+				  <small class="quoteAuthor">Alan Cooper</small>
+				</blockquote>
+				<h1>Web</h1>
+	        </div>
+          </div>
         </div>
+
+	    <!-- Begin page content -->
+	    <div class="row">
+	        <div class="container">
+	            <div class="row">
+			        <div class="page-header">
+			          <h1>StyleFit: AngularJS</h1>
+			        </div>
+			        <p>todo</p>
+		    	</div>
+		    	<div class="row">
+			        <div class="page-header">
+			          <h1>London Restaurant Map: KnockoutJS</h1>
+			        </div>
+			        <p>todo</p>
+		    	</div>
+		    	<div class="row">
+			        <div class="page-header">
+			          <h1>Weather View: Sencha Touch</h1>
+			        </div>
+			        <p>todo</p>
+		    	</div>
+	        </div>
+    	</div>
     </div> <!--/ wrap -->
 
     <div id="footer">
