--- a/desktop.html
+++ b/desktop.html
@@ -15,6 +15,7 @@
     <link href="assets/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
+    <link href="css/portfolio.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -36,33 +37,49 @@
 	<link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
   </head>
   <body>
-  		<div id="wrap">
-		    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-		      <div class="container">
-		        <div class="navbar-header">
-		          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-		            <span class="sr-only">Toggle navigation</span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		            <span class="icon-bar"></span>
-		          </button>
-		          <a class="navbar-brand" href="index.html"> <img width="20" height="20" src="images/logo/Icon-20x20@2x.png"></a>
-		          <a class="navbar-brand" href="index.html">Michael Le</a>
-		        </div>
-		        <div class="navbar-collapse collapse">
-		          <ul class="nav navbar-nav navbar-right">
-		            <li class="active"><a href="desktop.html">Desktop (WPF)</a></li>
-		            <li><a href="web.html">Web</a></li>
-		            <li><a href="branding.html">Branding</a></li>
-		            <li><a href="presentation.html">Presentation</a></li>
-		          </ul>
-		        </div><!--/.nav-collapse -->
-		      </div>
-		    </div>
-		<!-- Begin page content -->
-		<div class="container">
-            Finance and WPF
+	<div id="wrap">
+	    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+	      <div class="container">
+	        <div class="navbar-header">
+	          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	            <span class="sr-only">Toggle navigation</span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </button>
+	          <a class="navbar-brand" href="index.html"> <img width="20" height="20" src="images/logo/Icon-20x20@2x.png"></a>
+	          <a class="navbar-brand" href="index.html">Michael Le</a>
+	        </div>
+	        <div class="navbar-collapse collapse">
+	          <ul class="nav navbar-nav navbar-right">
+	            <li class="active"><a href="desktop.html">Desktop</a></li>
+	            <li><a href="web.html">Web</a></li>
+	            <li><a href="branding.html">Branding</a></li>
+	            <li><a href="presentation.html">Presentations</a></li>
+	          </ul>
+	        </div><!--/.nav-collapse -->
+	      </div>
+	    </div>
+
+	    <div class="jumbotron jumbotronPageHeader">
+          <div class="container">
+          	<div class="row">
+	            <blockquote class="pull-right">
+	              <br />
+				  <p>Computers are good at following instructions, but not at reading your mind.</p>
+				  <small class="quoteAuthor">Donald Knuth</small>
+				</blockquote>
+				<h1>Desktop</h1>
+	        </div>
+          </div>
         </div>
+
+		<!-- Begin page content -->
+		<div class="row">
+			<div class="container">
+	            Finance and WPF
+	        </div>
+    	</div>
     </div> <!--/ wrap -->
 
     <div id="footer">
