Fix layout on small screens

--- a/branding.html
+++ b/branding.html
@@ -75,27 +75,25 @@
         </div>
 
 	    <!-- Begin page content -->
-	    <div class="row">
-			<div class="container">
-	            <div class="row">
-			        <div class="page-header">
-			          <h1>"ICE" Rebranding</h1>
-			        </div>
-			        <p>todo</p>
-		    	</div>
-		    	<div class="row">
-			        <div class="page-header">
-			          <h1>MyCauli</h1>
-			        </div>
-			        <p>todo</p>
-		    	</div>
-		    	<div class="row">
-			        <div class="page-header">
-			          <h1>My Own Logo</h1>
-			        </div>
-			        <p>todo</p>
-		    	</div>
-	        </div>
+		<div class="container containerMain">
+            <div class="row">
+		        <div class="page-header">
+		          <h1>"ICE" Rebranding</h1>
+		        </div>
+		        <p>todo</p>
+	    	</div>
+	    	<div class="row">
+		        <div class="page-header">
+		          <h1>MyCauli</h1>
+		        </div>
+		        <p>todo</p>
+	    	</div>
+	    	<div class="row">
+		        <div class="page-header">
+		          <h1>My Own Logo</h1>
+		        </div>
+		        <p>todo</p>
+	    	</div>
         </div>
     </div> <!--/ wrap -->
 
