--- a/desktop.html
+++ b/desktop.html
@@ -75,11 +75,9 @@
         </div>
 
 		<!-- Begin page content -->
-		<div class="row">
-			<div class="container">
-	            Finance and WPF
-	        </div>
-    	</div>
+		<div class="container containerMain">
+            Finance and WPF
+        </div>
     </div> <!--/ wrap -->
 
     <div id="footer">
