--- a/presentation.html
+++ b/presentation.html
@@ -75,49 +75,47 @@
         </div>
 
 	    <!-- Begin page content -->
-	    <div class="row">
-		    <div class="container">
-		    	<div class="row">
-		        <div class="page-header">
-		          <h1>Blog</h1>
-		        </div>
-		        <p>TODO</p>
-		    	</div>	
-	        	<div class="row">
-		        <div class="page-header">
-		          <h1>Slides</h1>
-		        </div>
-		        <p>Todo</p>
+	    <div class="container containerMain">
+	    	<div class="row">
+	        <div class="page-header">
+	          <h1>Blog</h1>
+	        </div>
+	        <p>TODO</p>
+	    	</div>	
+        	<div class="row">
+	        <div class="page-header">
+	          <h1>Slides</h1>
+	        </div>
+	        <p>Todo</p>
 
-		        <!-- Three columns of text below the carousel -->
-			      <div class="row">
-			        <div class="col-lg-4">
-			          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-			          <h3>Heading</h3>
-			          <p>Todo</p>
-			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			        <div class="col-lg-4">
-			          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-			          <h3>Heading</h3>
-			          <p>Todo</p>
-			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			        <div class="col-lg-4">
-			          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-			          <h3>Heading</h3>
-			          <p>Todo</p>
-			          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-			        </div><!-- /.col-lg-4 -->
-			      </div><!-- /.row -->
-		    	</div>
-		    	<div class="row">
-		        <div class="page-header">
-		          <h1>Video</h1>
-		        </div>
-		        	<p>Todo</p>
-		    	</div>
-			</div>
+	        <!-- Three columns of text below the carousel -->
+		      <div class="row">
+		        <div class="col-lg-4">
+		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+		          <h3>Heading</h3>
+		          <p>Todo</p>
+		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		        <div class="col-lg-4">
+		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+		          <h3>Heading</h3>
+		          <p>Todo</p>
+		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		        <div class="col-lg-4">
+		          <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
+		          <h3>Heading</h3>
+		          <p>Todo</p>
+		          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+		        </div><!-- /.col-lg-4 -->
+		      </div><!-- /.row -->
+	    	</div>
+	    	<div class="row">
+	        <div class="page-header">
+	          <h1>Video</h1>
+	        </div>
+	        	<p>Todo</p>
+	    	</div>
 		</div>
     </div> <!--/ wrap -->
 
