--- a/web.html
+++ b/web.html
@@ -75,28 +75,26 @@
         </div>
 
 	    <!-- Begin page content -->
-	    <div class="row">
-	        <div class="container">
-	            <div class="row">
-			        <div class="page-header">
-			          <h1>StyleFit: AngularJS</h1>
-			        </div>
-			        <p>todo</p>
-		    	</div>
-		    	<div class="row">
-			        <div class="page-header">
-			          <h1>London Restaurant Map: KnockoutJS</h1>
-			        </div>
-			        <p>todo</p>
-		    	</div>
-		    	<div class="row">
-			        <div class="page-header">
-			          <h1>Weather View: Sencha Touch</h1>
-			        </div>
-			        <p>todo</p>
-		    	</div>
-	        </div>
-    	</div>
+        <div class="container containerMain">
+            <div class="row">
+		        <div class="page-header">
+		          <h1>StyleFit: AngularJS</h1>
+		        </div>
+		        <p>todo</p>
+	    	</div>
+	    	<div class="row">
+		        <div class="page-header">
+		          <h1>London Restaurant Map: KnockoutJS</h1>
+		        </div>
+		        <p>todo</p>
+	    	</div>
+	    	<div class="row">
+		        <div class="page-header">
+		          <h1>Weather View: Sencha Touch</h1>
+		        </div>
+		        <p>todo</p>
+	    	</div>
+        </div>
     </div> <!--/ wrap -->
 
     <div id="footer">
