--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
         </div>
 
 	    <!-- Begin page content -->
-		<div class="container">
+        <div class="container containerMain">
             <p class="lead">This is a showcase of my work</p>
         </div>
+		
     </div> <!--/ wrap -->
 
     <div id="footer">
