Add more content for Desktop and Web

--- a/desktop.html
+++ b/desktop.html
@@ -76,7 +76,36 @@
 
 		<!-- Begin page content -->
 		<div class="container containerMain">
-            Finance and WPF
+            <div class="row">
+		        <div class="page-header">
+		          <h1>Sample Screenshots</h1>
+		        </div>
+
+		        <div class="row">
+			        <div class="col-md-4">
+			        	<h3>Composite Images</h3>
+						<p>Before implementing the actual code and style for applications, it is good to come up with colour composites after wireframing so that people/stakeholders/developers can have a better idea of how things will look</p>
+						<a href="images/desktop/RiskReportSample.jpg" target="_blank">
+							<img src="images/desktop/RiskReportSample.jpg" width="100%" style="max-width:400px;" />
+						</a>
+			        </div>
+			        <div class="col-md-4">
+			          <h3>Charting</h3>
+			          <p>In the world of finance and user interface design you need to know multithreading, grids and charts. Below is a sample of charts done with the AmCharts library</p>
+			          <a href="images/desktop/WPF-Charting.jpg" target="_blank">
+			          	<img src="images/desktop/WPF-Charting.jpg" width="100%" style="max-width:400px;" />
+			          </a>
+			        </div>
+
+			        <div class="col-md-4">
+			          <h3>Flat Designs</h3>
+			          <p>By default the styles for WPF controls are not "flat". They are of the standard Windows style. Leveraging the power of control templates and styles, I was able to create a flat style for WPF</p>
+			          <a href="images/desktop/WPF-Flat.jpg" target="_blank">
+			          	<img src="images/desktop/WPF-Flat.jpg" width="100%" style="max-width:400px;" />
+			          </a>
+			        </div>
+			    </div><!-- /.row -->
+	    	</div>
         </div>
     </div> <!--/ wrap -->
 
