Update main landing

--- a/index.html
+++ b/index.html
@@ -75,7 +75,10 @@
 
 	    <!-- Begin page content -->
         <div class="container containerMain">
-            <p class="lead">This is a showcase of my work</p>
+          <br />
+            <p class="lead">This is a showcase of my work with user interface development and design ranging from <a href="desktop.html">Desktop</a>,
+              <a href="web.html">Web</a>, <a href="branding.html">Branding</a>, and  <a href="presentation.html">Presentations</a>
+            <p>
         </div>
 		
     </div> <!--/ wrap -->
