Add section about UX

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
+              <li><a href="ux.html">UX</a></li>
 	            <li><a href="desktop.html">Desktop</a></li>
 	            <li><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
@@ -87,8 +88,7 @@
 	    <!-- Begin page content -->
         <div class="container containerMain">
           <br />
-            <p class="lead">This is a showcase of my work with user interface development and design ranging from <a href="desktop.html">Desktop</a>,
-              <a href="web.html">Web</a>, <a href="branding.html">Branding</a>, and  <a href="presentation.html">Presentations</a>
+            <p class="lead">This is a showcase of my work with user interface development and design ranging from <a href="ux.html">UX</a>, <a href="desktop.html">Desktop</a>,<a href="web.html">Web</a>, <a href="branding.html">Branding</a>, and  <a href="presentation.html">Presentations</a>
             <p>
         </div>
 		
