--- a/web.html
+++ b/web.html
@@ -63,6 +63,7 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
+	          	<li><a href="ux.html">UX</a></li>
 	            <li><a href="desktop.html">Desktop</a></li>
 	            <li class="active"><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
