Add about me section

--- a/about.html
+++ b/about.html
@@ -63,10 +63,12 @@
 	        </div>
 	        <div class="navbar-collapse collapse">
 	          <ul class="nav navbar-nav navbar-right">
-	            <li class="active"><a href="desktop.html">Desktop</a></li>
+	          	<li><a href="ux.html">UX</a></li>
+	            <li><a href="desktop.html">Desktop</a></li>
 	            <li><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
 	            <li><a href="presentation.html">Presentations</a></li>
+	            <li class="active"><a href="about.html">About</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
@@ -77,10 +79,10 @@
           	<div class="row">
 	            <blockquote class="pull-right">
 	              <br />
-				  <p>Computers are good at following instructions, but not at reading your mind.</p>
-				  <small class="quoteAuthor">Donald Knuth</small>
+				  <p>A creative man is motivated by the desire to achieve, not by the desire to beat others.</p>
+				  <small class="quoteAuthor">Ayn Rand</small>
 				</blockquote>
-				<h1>Desktop</h1>
+				<h1>About Me</h1>
 	        </div>
           </div>
         </div>
@@ -88,11 +90,39 @@
 		<!-- Begin page content -->
 		<div class="container containerMain">
             <div class="row">
-		        <div class="page-header">
-		          <h1>Who am I?</h1>
-		        </div>
-
-		        
+		        <p class="lead">
+		        	Born in Canada, I have been lucky enough to have worked in New York, NY and London, UK. Most of my career has been in the financial services industry as an user interface developer and user experience practitioner. But this is only the beginning...	        	
+		        </p>		
+		        <blockquote>
+		        	<h1>Coding does not mean knowing UX</h1>
+		    	</blockquote>
+		    	<p>
+		    		I have a strong background in coding from studying at the University of Waterloo and spent the last 7 years coding user interfaces for investment banks. Coding alone does not make you know UX. My experience in UX has been self taught along the way and I took a course on HCI from Coursera.
+		    		<br /><br />
+		    		One of my early internships at Toyota Motors Canada taught me the basics of user focused design. Observations and analysis of the problem was first drilled into me when I worked at there in the Information Systems department. This involved waking up at 5am to make it into work by 5:45am so that I could be there when the shop floor managers get in to start their day. This allowed me to understand the problems that managers encountered both on the job and externally (ie. waking up really early!). 
+		    		<br /><br />
+					Defining the root problem goal and gathering requirements for a solution is trying to look past the obvious to find out the real motivators for the behaviour whether it's trying to find faults in the current process or trying to find reasons for user actions. Only then does coding a solution make sense.
+					<br /><br />
+					Testing and getting feedback were not always my favourite tasks as it is not always positive. However I learnt to appreciate this as it not only made my application better but it also helped me increase my knowledge in the domain. Only at that point could I make the lives of the people better by making the application better. 
+		    	</p>        
+		        <blockquote>
+		        	<h1>What is HCI?</h1>
+		    	</blockquote>
+		    	<p>
+		    		This is was a question I asked my manager back in 2010. He replied it's human computer interaction and our UX team can help you learn more. 
+		    		<br /><br />
+		    		After working with the UX team I found out that this was how I actually thought about UI development. It was never what I was coding but why? Why does it need to be responsive, why did the cell of the table get highlighted if a condition happened. Who cares? The user does. The field of HCI/UX helped me define my actions and thoughts I already knew. The skills and techniques of measuring feedback appeals to my analytical background and the actual interaction with the users makes the process about the lives of real people which makes you care about your work.
+		    		<br /><br />
+					In the end isn't HCI all about interacting with technology to make your life better by making it easier or more interesting? 
+				</p>				
+				<blockquote>
+		        	<h1>What's next?</h1>
+		    	</blockquote>
+		    	<p>
+		    		I am always looking for opportunities to help people interact with technology better. For a few months I volunteered in an after school activity to teach kids ages 9-11 how to code as part of the <a href="https://www.codeclub.org.uk/" target="_blank">Code Club</a> program.
+		    		<br /><br />
+		    		Professionally I am looking for creative roles that expose technology to the masses. I am strong enough technically and creatively to help envision and build future experiences. 
+		    	</p>
 	    	</div>
         </div>
     </div> <!--/ wrap -->
