--- a/desktop.html
+++ b/desktop.html
@@ -68,6 +68,7 @@
 	            <li><a href="web.html">Web</a></li>
 	            <li><a href="branding.html">Branding</a></li>
 	            <li><a href="presentation.html">Presentations</a></li>
+	            <li><a href="about.html">About</a></li>
 	          </ul>
 	        </div><!--/.nav-collapse -->
 	      </div>
