Update more text and images

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
                       <i class="icon-circle icon-stack-base"></i>
                       <i class="icon-linkedin icon-light"></i>
                     </span> 
+                    LinkedIn
                 </a>
                 <a href="https://twitter.com/lifeofmle" target="_blank">
                     <span class="icon-stack">
