--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
             
             <p class="lead">Simplifying the investment portfolio reports for the retail users</p>
           
-            <p>I designed financial content for the retail market while working at <a href="http://www.tobiasandtobias.com/" target="_blank">Tobias &amp; Tobias</a>. I helped design asset management websites and researched financial technology innovations.</p>
+            <p>I designed asset management websites and researched into financial technology innovations while working at <a href="http://www.tobiasandtobias.com/" target="_blank">Tobias &amp; Tobias</a>. Simplifying and restructuring data so that all investors can understand was a common challenge.</p>
 
             <button class="btn-portfolio" onclick="$('.project1-extra').slideToggle();">Read More</button>
 
