--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <br />
             <h3>I help shape and transform ideas into reality by designing both online and offline user experiences</h3>
 
-            <h3>My coding background helps me understand and manage technical aspects of a project. It also gives me greater flexibility when prototyping solutions.</h3>
+            <h3>My coding background helps me understand the technical aspects of a project. It also gives me greater flexibility when prototyping solutions.</h3>
           </div>
         </div>
       </div>
