--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
               <p><br />Based on our findings, we validated our concepts by using paper prototyping with our retail investors.</p>
 
               <h3>The Result</h3>
-              <p>The research and findings of the motivation of this assignment was publicised as a blog article. The prototype of a potential solution was built using Pixate. You can check out both from the links below.</p>
+              <p>The research and findings of the motivation of this assignment was published as a blog article. The prototype of a potential solution was built using Pixate. You can check out both from the links below.</p>
                
 
               <p>
