--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
             <li>
               <a href="#contact" class="plain scrollto">Contact</a>
             </li>
+            <li>
+              <a href="https://designinglogic.wordpress.com/" target="_blank" class="plain">Blog</a>
+            </li>
           </ul>
         </div><!--End navbar-collapse -->
         
