Change link to be a bit.ly link

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
               </p>
 
               <p>
-              <a href="http://pixt.io/p059esvsspc" target="_blank">
+              <a href="http://bit.ly/InvestmentApp" target="_blank">
                 <button class="btn-portfolio">View the Demo</button>
               </a> 
 
