--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
               <a href="#contact" class="plain scrollto">Contact</a>
             </li>
             <li>
+              <a href="now.html" class="plain">Now</a>
+            </li>
+            <li>
               <a href="https://designinglogic.wordpress.com/" target="_blank" class="plain">Blog</a>
             </li>
           </ul>
@@ -516,8 +519,8 @@
     <script src="js/jquery.masonry.min.js"></script>
     <script src="js/jquery.flexslider.min.js"></script>
     <script src="js/jquery.backstretch.min.js"></script>
-    <script src="js/scripts.js"></script>
-    
+    <script src="js/scripts.js"></script>    
+    <script src="js/navigation.js"></script>
   </body>
   
 </html>
