Change the links to remove the .html

--- a/now.html
+++ b/now.html
@@ -92,7 +92,7 @@
               <a href="#contact" class="plain scrollto">Contact</a>
             </li>
             <li>
-              <a href="now.html">Now</a>
+              <a href="http://lifeofmle.com/now">Now</a>
             </li>
             <li>
               <a href="https://designinglogic.wordpress.com/" target="_blank" class="plain">Blog</a>
