--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               <a href="#contact" class="plain scrollto">Contact</a>
             </li>
             <li>
-              <a href="now.html" class="plain">Now</a>
+              <a href="http://lifeofmle.com/now" class="plain">Now</a>
             </li>
             <li>
               <a href="https://designinglogic.wordpress.com/" target="_blank" class="plain">Blog</a>
