--- a/now.html
+++ b/now.html
@@ -83,7 +83,7 @@
               <a href="http://lifeofmle.com#home" class="plain scrollto">Home</a>
             </li>
             <li>
-              <a href="http://lifeofmle.com#services" class="plain scrollto">About Me</a>
+              <a href="http://lifeofmle.com#home" class="plain scrollto">About Me</a>
             </li>
             <li>
               <a href="http://lifeofmle.com#portfolio" class="plain scrollto">My Work</a>
