--- a/source/now.html
+++ b/source/now.html
@@ -72,7 +72,7 @@
             <a href="http://lifeofmle.com/now">Now</a>
           </li>
           <li>
-            <a href="https://designinglogic.wordpress.com/" target="_blank">Blog</a>
+            <a href="https://medium.com/@Lifeofmle" target="_blank">Blog</a>
           </li>
         </ul>    
       </div>  
